# diagnostico_de_redes

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  logger.py  main.py  pyproject.toml  rede.py  requirements.txt  sistema.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-app.yml
diagnostico_de_redes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
